src/usv_playpen/_config/gui_style_sheet.css
QWidget {
  background-color: white;
  color: #000000;
}
QProgressBar {
  padding: 0px;
  border: 0px;
  border-radius: 1px;
  text-align: left;
  margin-left: 35px;
}

QProgressBar::chunk {
  background-color: #7c807e;
  text-align: left;
  width: 10px;
  border: 0px;
}

QPushButton {
  border: 1px solid #6c6c6c;
  border-radius: 3px;
  padding: 5px 10px;
  margin: 1px;
  background-color: #f58025;
  color: #000000;
  font-weight: bold;
  min-width: 68px;
  min-height: 18px;
  max-width: 68px;
  max-height: 18px;
}
QPushButton:hover {
  border-radius: 3px;
  margin: 0px;
  border: 1px solid #6c6c6c;
}
QPushButton:focus {
  outline-color: transparent;
  border: 2px solid #c2c6c9;
}
QPushButton:pressed {
  background-color: #6c6c6c;
}
QPushButton:disabled {
  color: #cccccc;
  border-color: #808080;
}

QPushButton#loginButton {
  background-color: #ffffff;
  border-radius: 16px;
  margin: 0px;
  padding: 0px;
  min-width: 0px;
  min-height: 0px;
  max-width: none;
  max-height: none;
}

QPushButton#loginButton:hover {
  border-radius: 10px;
  margin: 0px;
  border: 1px solid #6c6c6c;
}

QPushButton#loginButton:pressed {
  background-color: #6c6c6c;
}

QSlider:handle {
  background-color: #f58025;
}
QSlider:handle:hover {
  background: #000000;
}

